# literavore

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  HOW_IT_WORKS.md  README.md  agents.md  docker-compose.yml  pyproject.toml
config/: default.yml
dev_log/: 2026-03-14_phase-0_scaffold.md  2026-03-14_phase-1_core-infrastructure.md  2026-03-14_phase-2_data-ingestion.md  2026-03-14_phase-3_pdf-extraction.md  2026-03-14_phase-4_summarization.md  2026-03-14_phase-5-6-7_embed-serve-integration.md  2026-03-15_phase-8-post_docker-api-polish.md  2026-03-15_phase-9_batched-pipeline-and-extraction.md
src/literavore/: cli.py  config.py  db.py  pipeline.py
src/literavore/embed/: __init__.py  embedder.py  index.py
src/literavore/extract/: pdf_extractor.py
src/literavore/ingest/: pdf_downloader.py  pdf_validator.py
src/literavore/normalize/: metadata.py
src/literavore/serve/: api.py  mcp_server.py  models.py  streamlit_app.py
src/literavore/sources/: __init__.py  base.py  openreview.py
src/literavore/storage/: __init__.py  base.py  local.py  s3.py
src/literavore/summarize/: llm_client.py  prompts.py  summarizer.py  tagger.py
src/literavore/utils/: __init__.py  logging.py  retry.py
tests/: conftest.py
tests/integration/: test_api.py  test_full_pipeline.py
tests/unit/: test_config.py  test_db.py  test_embedder.py  test_index.py  test_llm_client.py  test_metadata.py  test_models.py  test_openreview.py  test_pdf_downloader.py  test_pdf_extractor.py  test_pipeline.py  test_storage.py  test_summarizer.py  test_tagger.py
